--- a/RenditionSelector/.project
+++ b/RenditionSelector/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>com.adobe.flexbuilder.project.actionscriptnature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>bin-debug</name>
+			<type>2</type>
+			<location>/Users/bpetrin/Documents/local_web/swfs</location>
+		</link>
+	</linkedResources>
 </projectDescription>
